First_Step/data/46/189/execution.txt

Comment :=>>-The compilation or preparation of execution has failed
<|--
Tools.java:27: error: cannot find symbol
    Tools.sortFast(tab);
         ^
  symbol:   method sortFast(int[])
  location: class Tools
Tools.java:32: error: cannot find symbol
            a=i;
            ^
  symbol:   variable a
  location: class Tools
2 errors
Not compiled
--|>
Grade :=>>0.00000
